--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.4"
   }
 }
