--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.4"
