--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.4"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
