--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.4"
   },
