--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,10 @@
 /public/surat-keluar/*
 /public/surat-masuk/*
 /public/village-stall/*
-
-!public/icons
-!public/surat-keluar
-!public/surat-masuk
-!public/village-stall
+/public/service/*
+/public/stall/*
+/public/news/*
+/public/applicants/*
 
 /logs
 *.log
